istio/templates/service-entry.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
    name: ext-svc-redir
spec:
    hosts:
    - ra1nst0rm3d.ru
    location: MESH_EXTERNAL
    ports:
    - number: 80
      name: http
      protocol: HTTP
    resolution: STATIC
    endpoints:
    - address: 176.109.101.16
