istio/templates/vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
    name: redir
spec:
    hosts:
    - ra1nst0rm3d.ru.test
    gateways:
    - istio-system/internal-gateway
    http:
    - match:
      - port: 80
      route:
      - destination:
          host: ra1nst0rm3d.ru
